🐞 Fix Tutanota footer spacing #16 #fixed

--- a/src/dark/dark.css
+++ b/src/dark/dark.css
@@ -38,7 +38,7 @@ tr{
 .sp{ /* Separator tr; props are actually contained by it's inner element atm. */ }
 
 .sp__inner{
-  height: 30px;
+  padding: 15px 0;
 }
 
 .spd{ /* Separator tr (double); props are actually contained by it's inner element atm. */ }
